--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     Benefits of Odigo
                 </h2>
                 <div class="benefits_cards">
-                    <div class="benefit_card">
+                    <div class="benefits_card">
                         <div class="benefits_class-pic">
                             <img src="./img/svg/temple.svg" alt="Welcome to Odigo!" class="benefits_card_thumb">
                         </div>
@@ -125,6 +125,24 @@
             </div>
         </section>
         <!-- benefits end -->
+
+        <!-- places start -->
+
+<section class="places">
+    <div class="wrapper_full">
+        <div class="places_caption">
+            <h2 class="places_title section-title">
+                Get inspired for your next trip
+            </h2>
+            <a href="" class="places_view-all">VIEW ALL</a>
+        </div>
+        
+    </div>
+    
+</section>
+
+
+        <!-- places end -->
     </main>
 </body>
 
