top places cards

--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
                             Your Personal Japan Guide
                         </h4>
                         <p class="benefits_card-description">
-                            Be sure to check out our trip planner as well as the pre-made trips below! Choose your right destination on an adventurous journey!
+                            Be sure to check out our trip planner as well as the pre-made trips below! Choose your right
+                            destination on an adventurous journey!
                         </p>
                         <a href="#!" class="benefits_card_more">
                             LEARN MORE
@@ -109,13 +110,15 @@
                     </div>
                     <div class="benefit_card">
                         <div class="benefits_class-pic">
-                            <img src="./img/svg/market.svg" alt="Promoting Local Businesses" class="benefits_card_thumb">
+                            <img src="./img/svg/market.svg" alt="Promoting Local Businesses"
+                                class="benefits_card_thumb">
                         </div>
                         <h5 class="benefits_card-title">
                             Promoting Local Businesses
                         </h5>
                         <p class="benefits_card-description">
-                            Exploring Japan can be both fun and rewarding. In each city you will find an information materials, promoted by Odijo.
+                            Exploring Japan can be both fun and rewarding. In each city you will find an information
+                            materials, promoted by Odijo.
                         </p>
                         <a href="#!" class="benefits_card_more">
                             LEARN MORE
@@ -126,23 +129,148 @@
         </section>
         <!-- benefits end -->
 
+
         <!-- places start -->
 
-<section class="places">
-    <div class="wrapper_full">
-        <div class="places_caption">
-            <h2 class="places_title section-title">
-                Get inspired for your next trip
-            </h2>
-            <a href="" class="places_view-all">VIEW ALL</a>
-        </div>
-        
-    </div>
-    
-</section>
+        <section class="places">
+            <div class="wrapper_full">
+                <div class="places_caption">
+                    <h2 class="places_title section-title">
+                        Get inspired for your next trip
+                    </h2>
+                    <a href="" class="places_view-all">VIEW ALL</a>
+                </div>
 
+                <div class="places_cards">
+                    <figure class="places_card places_card_size_lg">
+                        <img src="./img/places/Mount_Fuji.jpg" alt="Mount Fuji" class="places_card-pic">
+                        <figcaption class="places_card-title">
+                            Mount Fuji
+                        </figcaption>
+                        <a href="#!" class="places_card-link"></a>
 
+                    </figure>
+
+                    <figure class="places_card places_card_size_lg">
+                        <img src="./img/places/Kyoto.jpg" alt="Kyoto" class="places_card-pic">
+                        <figcaption class="places_card-title">
+                            Kyoto
+                        </figcaption>
+                        <a href="#!" class="places_card-link"></a>
+                    </figure>
+
+                    <figure class="places_card places_card_size_sm">
+                        <img src="./img/places/Tokyo.jpg" alt="Tokyo" class="places_card-pic">
+                        <figcaption class="places_card-title">
+                            Tokyo
+                        </figcaption>
+                        <a href="#!" class="places_card-link"></a>
+                    </figure>
+
+                    <figure class="places_card places_card_size_sm">
+                        <img src="./img/places/Niigata.jpg" alt="Niigata" class="places_card-pic">
+                        <figcaption class="places_card-title">
+                            Niigata
+                        </figcaption>
+                        <a href="#!" class="places_card-link"></a>
+                    </figure>
+
+                    <figure class="places_card places_card_size_sm">
+                        <img src="./img/places/Sapporo.jpg" alt="Sapporo" class="places_card-pic">
+                        <figcaption class="places_card-title">
+                            Sapporo
+                        </figcaption>
+                        <a href="#!" class="places_card-link"></a>
+                    </figure>
+
+                </div>
+
+            </div>
+
+        </section>
         <!-- places end -->
+
+
+
+        <!-- tours start -->
+        <div class="tours">
+            <div class="wrapper_full">
+                <div class="tours_tour tour">
+                    <div class="tour_pic">
+                        <img src="./img/places/tour_1.jpg" alt="Prefecture-in-Focus:Tottori" class="tour_thumb">
+                    </div>
+                    <div class="tour_info">
+                        <h3 class="tour_title">
+                            Prefecture in Focus: Tottori
+                        </h3>
+                        <p class="tour_desc">
+                            Tottori City was ranked No. 1 in a 2017 ranking of rural areas people would like to live in.
+                            Authentic nature
+                            will definitely attract your eyes.
+                        </p>
+                        <a href="#!" class="tour_more">VIEW PREFECTURE</a>
+                    </div>
+                </div>
+
+                <div class="tours_tour tour">
+                    <div class="tour_info">
+                        <h3 class="tour_title">
+                            Featured Neighborhood: Kyoto’s Arashiyama
+                        </h3>
+                        <p class="tour_desc">
+                            Arashiyama is the second-most important sightseeing district in Kyoto. It’s all about
+                            shrines and temples, but the star attraction is the famed Arashiyama Bamboo Grove.
+                        </p>
+                        <a href="#!" class="tour_more">VIEW NEIGHBORHOOD</a>
+                    </div>
+                    <div class="tour_pic">
+                        <img src="./img/places/tour_2.jpg" alt="Featured Neighborhood: Kyoto’s Arashiyama"
+                            class="tour_thumb">
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <!-- Top places start -->
+        <section class="top">
+            <div class="wrapper_full">
+                <h2 class="top_title section-title">
+                    Today top places to visit
+
+                </h2>
+                <div class="top_cards">
+                    <div class="top_card">
+                        <div class="top_card-pic">
+                            <img src="./img/places/top_pic-1.jpg" alt="NAGOYA" class="top_card-thumb">
+                            <div class="top_card-stats">
+                                <h3 class="top_card-title">
+                                    NAGOYA
+                                </h3>
+                                <div class="top_card-likes">
+                                    <span class="top_card-likes-value">
+                                        221
+                                    </span>
+                                </div>
+                                <div class="top_card-comments">
+                                    <span class="top_card-comments-value">
+                                        50
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="top_card-desc">
+                            The largest city in the Chūbu region of Japan. It is Japan's fourth-largest incorporated city and the third most populous urban area.
+                        </p>
+                        <a href="#!" class="top_card-more">SEE MORE</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- Top places end -->
+
     </main>
 </body>
 
