--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
                         </li>
                     </ul>
                 </nav>
+                <div class="header_burger burger">
+                    <span class="burger_line burger_line_first"></span>
+                    <span class="burger_line burger_line_second"></span>
+                    <span class="burger_line burger_line_third"></span>
+                </div>
             </div>
         </div>
     </header>
@@ -204,7 +209,8 @@
                             Prefecture in Focus: Tottori
                         </h3>
                         <p class="tour_desc">
-                            Tottori City was ranked No. 1 in a 2017 ranking of rural areas people would like to live in.
+                            Tottori City (鳥取市, Tottori-shi) was ranked No. 1 in a 2017 ranking of rural areas people
+                            would like to live in.
                             Authentic nature
                             will definitely attract your eyes.
                         </p>
@@ -218,7 +224,8 @@
                             Featured Neighborhood: Kyoto’s Arashiyama
                         </h3>
                         <p class="tour_desc">
-                            Arashiyama is the second-most important sightseeing district in Kyoto. It’s all about
+                            Arashiyama (嵐山, Storm Mountain) is the second-most important sightseeing district in Kyoto.
+                            It’s all about
                             shrines and temples, but the star attraction is the famed Arashiyama Bamboo Grove.
                         </p>
                         <a href="#!" class="tour_more">VIEW NEIGHBORHOOD</a>
@@ -237,8 +244,10 @@
             <div class="wrapper_full">
                 <h2 class="top_title section-title">
                     Today top places to visit
-
                 </h2>
+
+                <!-- NAGOYA -->
+
                 <div class="top_cards">
                     <div class="top_card">
                         <div class="top_card-pic">
@@ -260,7 +269,150 @@
                             </div>
                         </div>
                         <p class="top_card-desc">
-                            The largest city in the Chūbu region of Japan. It is Japan's fourth-largest incorporated city and the third most populous urban area.
+                            Nagoya (名古屋市) is the largest city in the Chūbu region of Japan. It is Japan's fourth-largest
+                            city, the third most populous urban area.
+                        </p>
+                        <a href="#!" class="top_card-more">SEE MORE</a>
+                    </div>
+
+                    <!-- NIIGATA -->
+
+                    <div class="top_card">
+                        <div class="top_card-pic">
+                            <img src="./img/places/top_pic-2.jpg" alt="NIIGATA" class="top_card-thumb">
+                            <div class="top_card-stats">
+                                <h3 class="top_card-title">
+                                    NIIGATA
+                                </h3>
+                                <div class="top_card-likes">
+                                    <span class="top_card-likes-value">
+                                        203
+                                    </span>
+                                </div>
+                                <div class="top_card-comments">
+                                    <span class="top_card-comments-value">
+                                        39
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="top_card-desc">
+                            Niigata (新潟市) is the largest city on the west coast of Honshu, the second largest city in
+                            Chūbu
+                            region after Nagoya. It faces the Sea of Japan and Sado Island.
+                        </p>
+                        <a href="#!" class="top_card-more">SEE MORE</a>
+                    </div>
+
+                    <!-- OSAKA -->
+
+                    <div class="top_card">
+                        <div class="top_card-pic">
+                            <img src="./img/places/top_pic-3.jpg" alt="OSAKA" class="top_card-thumb">
+                            <div class="top_card-stats">
+                                <h3 class="top_card-title">
+                                    OSAKA
+                                </h3>
+                                <div class="top_card-likes">
+                                    <span class="top_card-likes-value">
+                                        288
+                                    </span>
+                                </div>
+                                <div class="top_card-comments">
+                                    <span class="top_card-comments-value">
+                                        67
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="top_card-desc">
+                            Osaka (大阪市) is the largest city of the Keihanshin Metropolitan Area, the second-largest
+                            metropolitan area
+                            in Japan with more than 20 million inhabitants.
+                        </p>
+                        <a href="#!" class="top_card-more">SEE MORE</a>
+                    </div>
+
+                    <!-- SAITAMA -->
+
+                    <div class="top_card">
+                        <div class="top_card-pic">
+                            <img src="./img/places/top_pic-4.jpg" alt="SAITAMA" class="top_card-thumb">
+                            <div class="top_card-stats">
+                                <h3 class="top_card-title">
+                                    SAITAMA
+                                </h3>
+                                <div class="top_card-likes">
+                                    <span class="top_card-likes-value">
+                                        209
+                                    </span>
+                                </div>
+                                <div class="top_card-comments">
+                                    <span class="top_card-comments-value">
+                                        45
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="top_card-desc">
+                            Saitama (さいたま市, Saitama-shi) is an area incorporates the cities of Urawa, Ōmiya, Yono and
+                            Iwatsuki, designated by government ordinance.
+                        </p>
+                        <a href="#!" class="top_card-more">SEE MORE</a>
+                    </div>
+
+                    <!-- UENO -->
+
+                    <div class="top_card">
+                        <div class="top_card-pic">
+                            <img src="./img/places/top_pic-5.jpg" alt="UENO" class="top_card-thumb">
+                            <div class="top_card-stats">
+                                <h3 class="top_card-title">
+                                    UENO
+                                </h3>
+                                <div class="top_card-likes">
+                                    <span class="top_card-likes-value">
+                                        194
+                                    </span>
+                                </div>
+                                <div class="top_card-comments">
+                                    <span class="top_card-comments-value">
+                                        40
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="top_card-desc">
+                            Ueno (上野) is a district in Tokyo's Taitō Ward, the home of Ueno Park. The home of the Tokyo
+                            National Museum and National Museum of Western Art.
+                        </p>
+                        <a href="#!" class="top_card-more">SEE MORE</a>
+                    </div>
+
+                    <!-- SHIBUYA -->
+
+                    <div class="top_card">
+                        <div class="top_card-pic">
+                            <img src="./img/places/top_pic-6.jpg" alt="SHIBUYA" class="top_card-thumb">
+                            <div class="top_card-stats">
+                                <h3 class="top_card-title">
+                                    SHIBUYA
+                                </h3>
+                                <div class="top_card-likes">
+                                    <span class="top_card-likes-value">
+                                        186
+                                    </span>
+                                </div>
+                                <div class="top_card-comments">
+                                    <span class="top_card-comments-value">
+                                        38
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="top_card-desc">
+                            Shibuya (渋谷 Shibuya-ku) is a special ward in Tokyo. It houses the two busiest railway
+                            stations in the world, Shinjuku Station and Shibuya Station.
                         </p>
                         <a href="#!" class="top_card-more">SEE MORE</a>
                     </div>
@@ -268,10 +420,95 @@
             </div>
         </section>
 
-
         <!-- Top places end -->
 
+        <!-- Videos start -->
+        <div class="videos">
+            <div class="videos_wrapper">
+                <div class="video_item"></div>
+                <iframe class="video_element" src="https://www.youtube.com/embed/00ZXaXIABMY" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
+        </div>
+
+        <!-- Videos end -->
+
     </main>
+
+    <footer class="footer">
+        <div class="wrapper">
+            <div class="footer_item">
+                <div class="footer_logo">
+                    <img src="./img/svg/odigo-logo.svg" alt="Odigo" class="class_pic">
+                </div>
+                <nav class="footer_nav">
+                    <ul class="footer_menu">
+                        <!-- Column 1 -->
+                        <li class="footer_menu-item">
+                            <h3 class="footer_menu-title">
+                                Company
+                            </h3>
+                        </li>
+                        <li class="footer_menu-item">
+                            <a href="#!" class="footer_menu-link">About</a>
+                        </li>
+                        <li class="footer_menu-item">
+                            <a href="#!" class="footer_menu-link">Team</a>
+                        </li>
+                        <li class="footer_menu-item">
+                            <a href="#!" class="footer_menu-link">Careers</a>
+                        </li>
+                        <li class="footer_menu-item">
+                            <a href="#!" class="footer_menu-link">Privacy Policy</a>
+                        </li>
+                        <!-- Column 2 -->
+                    </ul>
+                    <ul class="footer_menu">
+                        <li class="footer_menu-item">
+                            <h3 class="footer_menu-title">
+                                Locations
+                            </h3>
+                        </li>
+                        <li class="footer_menu-item">
+                            <a href="#!" class="footer_menu-link">Tokyo</a>
+                        </li>
+                        <li class="footer_menu-item">
+                            <a href="#!" class="footer_menu-link">Kyoto</a>
+                        </li>
+                        <li class="footer_menu-item">
+                            <a href="#!" class="footer_menu-link">Osaka</a>
+                        </li>
+                        <li class="footer_menu-item">
+                            <a href="#!" class="footer_menu-link">Hokkaido</a>
+                        </li>
+                    </ul>
+                    <!-- Column 3 -->
+                    <ul class="footer_menu">
+                        <li class="footer_menu-item">
+                            <h3 class="footer_menu-title">
+                                Social Media
+                            </h3>
+                        </li>
+                        <li class="footer_menu-item">
+                            <a href="#!" class="footer_menu-link">Facebook</a>
+                        </li>
+                        <li class="footer_menu-item">
+                            <a href="#!" class="footer_menu-link">Twitter</a>
+                        </li>
+                        <li class="footer_menu-item">
+                            <a href="#!" class="footer_menu-link">Instagram</a>
+                        </li>
+                        <li class="footer_menu-item">
+                            <a href="#!" class="footer_menu-link">YouTube</a>
+                        </li>
+                    </ul>
+                </nav>
+
+            </div>
+        </div>
+    </footer>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
