--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 <body>
     <!-- header start -->
     <header class="header">
-
         <div class="wrapper">
             <div class="header_wrapper">
                 <div class="header-logo">
@@ -36,6 +35,10 @@
                             <a href="#!" class="header_link">Sign in</a>
                         </li>
                     </ul>
+                    <div class="header_nav-close">
+                        <span class="header_nav-close-line"></span>
+                        <span class="header_nav-close-line"></span>
+                    </div>
                 </nav>
                 <div class="header_burger burger">
                     <span class="burger_line burger_line_first"></span>
@@ -82,8 +85,9 @@
                     Benefits of Odigo
                 </h2>
                 <div class="benefits_cards">
+
                     <div class="benefits_card">
-                        <div class="benefits_class-pic">
+                        <div class="benefits_card-pic">
                             <img src="./img/svg/temple.svg" alt="Welcome to Odigo!" class="benefits_card_thumb">
                         </div>
                         <h3 class="benefits_card-title">
@@ -98,29 +102,29 @@
                         </a>
                     </div>
 
-                    <div class="benefit_card">
-                        <div class="benefits_class-pic">
+                    <div class="benefits_card">
+                        <div class="benefits_card-pic">
                             <img src="./img/svg/person.svg" alt="Your Personal Japan Guide" class="benefits_card_thumb">
                         </div>
-                        <h4 class="benefits_card-title">
+                        <h3 class="benefits_card-title">
                             Your Personal Japan Guide
-                        </h4>
+                        </h3>
                         <p class="benefits_card-description">
                             Be sure to check out our trip planner as well as the pre-made trips below! Choose your right
-                            destination on an adventurous journey!
+                            adventurous journey!
                         </p>
                         <a href="#!" class="benefits_card_more">
                             LEARN MORE
                         </a>
                     </div>
-                    <div class="benefit_card">
-                        <div class="benefits_class-pic">
+                    <div class="benefits_card">
+                        <div class="benefits_card-pic">
                             <img src="./img/svg/market.svg" alt="Promoting Local Businesses"
                                 class="benefits_card_thumb">
                         </div>
-                        <h5 class="benefits_card-title">
+                        <h3 class="benefits_card-title">
                             Promoting Local Businesses
-                        </h5>
+                        </h3>
                         <p class="benefits_card-description">
                             Exploring Japan can be both fun and rewarding. In each city you will find an information
                             materials, promoted by Odijo.
@@ -230,7 +234,7 @@
                         </p>
                         <a href="#!" class="tour_more">VIEW NEIGHBORHOOD</a>
                     </div>
-                    <div class="tour_pic">
+                    <div class="tour_pic tour_pic-mob_first">
                         <img src="./img/places/tour_2.jpg" alt="Featured Neighborhood: Kyoto’s Arashiyama"
                             class="tour_thumb">
                     </div>
@@ -299,7 +303,7 @@
                         <p class="top_card-desc">
                             Niigata (新潟市) is the largest city on the west coast of Honshu, the second largest city in
                             Chūbu
-                            region after Nagoya. It faces the Sea of Japan and Sado Island.
+                            region. It faces the Sea of Japan and Sado Island.
                         </p>
                         <a href="#!" class="top_card-more">SEE MORE</a>
                     </div>
