--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
                 <nav class="header_nav">
                     <ul class="header_list">
                         <li class="header_item">
-                            <a href="#!" class="header_link">Articles</a>
+                            <a href="#articles" class="header_link js-scroll">Articles</a>
                         </li>
                         <li class="header_item">
-                            <a href="#!" class="header_link">Locations</a>
+                            <a href="#locations" class="header_link js-scroll">Locations</a>
                         </li>
                         <li class="header_item">
-                            <a href="#!" class="header_link">Videos</a>
+                            <a href="#videos" class="header_link js-scroll">Videos</a>
                         </li>
                         <li class="header_item">
-                            <a href="#!" class="header_link">Sign in</a>
+                            <a href="#sign-in" class="header_link js-scroll">Sign in</a>
                         </li>
                     </ul>
                     <div class="header_nav-close">
@@ -52,7 +52,7 @@
 
     <main class="main">
         <!-- intro start -->
-        <section class="intro">
+        <section class="intro" id="sign-in">
             <div class="wrapper">
                 <h1 class="intro_title">Discover Amazing places in Japan</h1>
                 <p class="intro_subtitle">As a true samurai, work your way through Japan's unforgettable places! Explore
@@ -202,7 +202,7 @@
 
 
         <!-- tours start -->
-        <div class="tours">
+        <div class="tours" id="articles">
             <div class="wrapper_full">
                 <div class="tours_tour tour">
                     <div class="tour_pic">
@@ -244,7 +244,7 @@
         </div>
 
         <!-- Top places start -->
-        <section class="top">
+        <section class="top" id="locations">
             <div class="wrapper_full">
                 <h2 class="top_title section-title">
                     Today top places to visit
@@ -427,7 +427,7 @@
         <!-- Top places end -->
 
         <!-- Videos start -->
-        <div class="videos">
+        <div class="videos" id="videos">
             <div class="videos_wrapper">
                 <div class="video_item"></div>
                 <iframe class="video_element" src="https://www.youtube.com/embed/00ZXaXIABMY" frameborder="0"
