--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Discover Amazing places in Japan</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.min.css">
 
 </head>
 
@@ -512,7 +512,7 @@
             </div>
         </div>
     </footer>
-    <script src="./js/main.js"></script>
+    <script src="./js/main-es5.min.js"></script>
 </body>
 
 </html>
