--- a/index/index-lg.html
+++ b/index/index-lg.html
@@ -151,46 +151,46 @@
                 </div>
 
                 <div class="places_cards">
-                    <figure class="places_card places_card_size_lg">
+                    <div class="places_card places_card_size_lg">
                         <img src="./img/places/Mount_Fuji.jpg" alt="Mount Fuji" class="places_card-pic">
-                        <figcaption class="places_card-title">
+                        <h3 class="places_card-title">
                             Mount Fuji
-                        </figcaption>
+                        </h3>
                         <a href="#!" class="places_card-link"></a>
 
-                    </figure>
+                    </div>
 
-                    <figure class="places_card places_card_size_lg">
+                    <div class="places_card places_card_size_lg">
                         <img src="./img/places/Kyoto.jpg" alt="Kyoto" class="places_card-pic">
-                        <figcaption class="places_card-title">
+                        <h3 class="places_card-title">
                             Kyoto
-                        </figcaption>
+                        </h3>
                         <a href="#!" class="places_card-link"></a>
-                    </figure>
+                    </div>
 
-                    <figure class="places_card places_card_size_sm">
+                    <div class="places_card places_card_size_sm">
                         <img src="./img/places/Tokyo.jpg" alt="Tokyo" class="places_card-pic">
-                        <figcaption class="places_card-title">
+                        <h3 class="places_card-title">
                             Tokyo
-                        </figcaption>
+                        </h3>
                         <a href="#!" class="places_card-link"></a>
-                    </figure>
+                    </div>
 
-                    <figure class="places_card places_card_size_sm">
+                    <div class="places_card places_card_size_sm">
                         <img src="./img/places/Niigata.jpg" alt="Niigata" class="places_card-pic">
-                        <figcaption class="places_card-title">
+                        <h3 class="places_card-title">
                             Niigata
-                        </figcaption>
+                        </h3>
                         <a href="#!" class="places_card-link"></a>
-                    </figure>
+                    </div>
 
-                    <figure class="places_card places_card_size_sm">
+                    <div class="places_card places_card_size_sm">
                         <img src="./img/places/Sapporo.jpg" alt="Sapporo" class="places_card-pic">
-                        <figcaption class="places_card-title">
+                        <h3 class="places_card-title">
                             Sapporo
-                        </figcaption>
+                        </h3>
                         <a href="#!" class="places_card-link"></a>
-                    </figure>
+                    </div>
 
                 </div>
 
@@ -430,7 +430,7 @@
         <div class="videos" id="videos">
             <div class="videos_wrapper">
                 <div class="video_item"></div>
-                <iframe class="video_element" src="https://www.youtube.com/embed/00ZXaXIABMY" frameborder="0"
+                <iframe class="video_element" src="https://www.youtube.com/embed/00ZXaXIABMY"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
             </div>
